--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,28 @@
-group 'com.waldo'
-version '1.0'
-
 buildscript {
-  ext.kotlin_version = '1.0.5'
+
+  ext {
+    springBootVersion = '1.4.2.RELEASE'
+    kotlin_version = '1.0.5-2'
+  }
 
   repositories {
     mavenCentral()
   }
+
   dependencies {
+    classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
   }
 }
 
-apply plugin: "kotlin"
+apply {
+  plugin("kotlin")
+  plugin("org.springframework.boot")
+}
 
 jar {
   baseName = "assignment"
-  manifest {
-    attributes 'Main-Class': 'com.waldo.assignment.ApplicationKt'
-  }
-  from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+  version = '1.0'
 }
 
 repositories {
@@ -27,11 +30,16 @@ repositories {
 }
 
 dependencies {
+  compile('org.springframework.boot:spring-boot-starter-data-mongodb')
   compile("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
   compile('com.drewnoakes:metadata-extractor:2.9.1')
   compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo:1.50.5')
-  compile('org.litote.kmongo:kmongo:3.3.5')
+//  compile('org.litote.kmongo:kmongo:3.3.5')
   compile('org.slf4j:slf4j-api')
   compile('ch.qos.logback:logback-classic:1.1.7')
   compile('ch.qos.logback:logback-core:1.1.7')
+}
+
+springBoot {
+  mainClass = "com.waldo.assignment.ApplicationKt"
 }
